--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <title>Omnifood</title>
 </head>
 <body>
+    <header class="header">
+        <img src="img/omnifood-logo.png" alt="Omifood logo" class="logo">
+        <nav class="main-nav">
+            Navigation
+        </nav>
+    </header>
+
+    <main>
     <section class="section-hero">
         <div class="hero">
         <div class="hero-text-box">
@@ -43,6 +51,6 @@
         </div>
     </div>
     </section>
-    
+</main>
 </body>
 </html>
